--- a/04_개별종합과제안내.md
+++ b/04_개별종합과제안내.md
@@ -3,7 +3,7 @@
 ## 1. 과제 목적
 
 본 과제의 목적은 **Arduino–서버–스마트폰 앱**을 연동하여
-**모니터링(센싱)**과 **제어(액추에이션)** 기능을 모두 갖춘 **완성형 임베디드 시스템**을 직접 설계·구현하는 데 있습니다.
+**모니터링(센싱)** 과 **제어(액추에이션)** 기능을 모두 갖춘 **완성형 임베디드 시스템**을 직접 설계·구현하는 데 있습니다.
 
 학생들은 센서와 액추에이터를 다루고, 서버를 통한 데이터 송수신, 스마트폰 앱과의 연동까지 포함한 **작은 IoT 프로젝트 전체 흐름**을 경험하게 됩니다.
 
@@ -20,7 +20,7 @@
 
 ### ✔ 서버 프로그램 활용
 
-* 예: Processing 서버, Python Flask 서버 등
+* 예: Processing 서버
 * 역할: Arduino ↔ 앱 간 데이터 중계 및 저장
 
 ### ✔ 스마트폰 앱 활용
